--- a/contacts/templates/contacts/content.html
+++ b/contacts/templates/contacts/content.html
@@ -11,7 +11,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         {% load static %}
-        <link rel="stylesheet" href="{% static '/style.css' %}">
+        <link rel="stylesheet" href="{% static 'contacts/style.css' %}">
         <title>Personal Assistant</title>
     </head>
     <body>
